# qail

./: .gitignore  CHANGELOG.md  Cargo.toml  PERFORMANCE.md  README.md  ROADMAP.md  coverage_report.md  qail.schema.json  schema.qail  schema_copy.qail
cli/: Cargo.toml  README.md
cli/src/: backup.rs  exec.rs  introspection.rs  lib.rs  lint.rs  migrations.rs  repl.rs  schema.rs  shadow.rs  sql_gen.rs  types.rs  worker.rs
cli/src/migrations/: analyze.rs  create.rs  types.rs
core/: Cargo.toml  README.md
core/examples/: test_case_when.rs  test_floats.rs  test_joins.rs  test_multi_cte.rs  test_multiline_sql.rs  test_param_repro.rs  test_qail_output.rs  test_query_parse.rs  test_real_span.rs  test_simple_select.rs  test_string_funcs.rs  test_subquery.rs  test_upsert.rs  whatsapp_insights.rs
core/src/: build.rs  codegen.rs  error.rs  lib.rs  schema.rs  typed.rs  validator.rs
core/src/analyzer/: impact.rs  mod.rs  scanner.rs
core/src/ast/: cages.rs  cmd.rs  conditions.rs  expr.rs  joins.rs  mod.rs  operators.rs  values.rs
core/src/fmt/: mod.rs
core/src/migrate/: alter.rs  diff.rs  mod.rs  named_migration.rs  parser.rs  schema.rs  types.rs
core/src/parser/: mod.rs  query_file.rs  schema.rs
core/src/transformer/: mod.rs  registry.rs  traits.rs
core/src/transpiler/: conditions.rs  ddl.rs  dialect.rs  mod.rs  traits.rs
core/tests/: formatting_test.rs
daemon/: Cargo.toml
daemon/src/: main.rs
encoder/: Cargo.toml
encoder/src/: lib.rs
ffi/: Cargo.toml
ffi/include/: qail.h
ffi/src/: lib.rs
gateway/: Cargo.toml  README.md
gateway/examples/: benchmark.rs  policies.yaml  schema.yaml  serve.rs  test_binary.rs
gateway/src/: auth.rs  cache.rs  config.rs  error.rs  handler.rs  lib.rs  metrics.rs  middleware.rs  policy.rs  router.rs  schema.rs  server.rs  ws.rs
go/: Cargo.toml
go/go/: driver.go  qail.go
go/go/bench/: bottleneck.go  cstring.go  gorm_vs_qail.go  prepared.go  prepared_benchmark.go  qail_vs_pgx.go  rust_io.go  rust_io_v2.go  sequential.go
go/go/examples/: basic.go
go/src/: lib.rs
lsp/: Cargo.toml
lsp/src/: main.rs  server.rs
lsp/src/handlers/: action.rs  completion.rs  document.rs  hover.rs  mod.rs
mysql/: Cargo.toml
mysql/src/: auth.rs  connection.rs
pg/: Cargo.toml  README.md
pg/examples/: array_3d_test.rs  asyncpg_benchmark.py  battle_test.rs  buffer_stress.rs  builder_test.rs  complex_test.rs  copy_benchmark.rs  cte_real_test.rs  cte_test.rs  data_safety_stress_test.rs  db_benchmark.rs  deep_stress_test.rs  encoding_benchmark.rs  expr_test.rs  fifty_million.rs  fifty_million_libpq  fifty_million_libpq.c  fifty_million_pgx.go  go.mod  hundred_million.rs  libpq_benchmark.rs  libpq_only.rs  libpq_pool.rs  migration_battle_test.rs  million.rs  million_ast.rs  million_asyncpg.py  million_blocking.rs  million_cached.rs  million_complex.rs  million_complex_fair.rs  million_giant.rs  million_libpq  million_libpq.c  million_local.rs  million_prepared.rs  million_raw.rs  orm_benchmark.rs  pgx_benchmark.go  pgx_complex_benchmark.go  (+17 more)
pg/src/: lib.rs
pg/src/driver/: cancel.rs  connection.rs  copy.rs  cursor.rs  io.rs  io_backend.rs  mod.rs  pipeline.rs  pool.rs  prepared.rs  query.rs  row.rs  stream.rs  transaction.rs
pg/src/protocol/: ast_encoder.rs  auth.rs  copy_encoder.rs  encoder.rs  error.rs  mod.rs  types.rs  wire.rs
pg/src/types/: mod.rs  numeric.rs
pg/tests/: integration.rs
php/: Cargo.toml
php/ext/qail/: Makefile  Makefile.objects  config.h  config.h.in  config.m4  config.nice  config.status  configure  libtool  qail.c  qail.dep  qail.la  qail.lo  run-tests.php
php/php/: Qail.php  bench.php  bench_copy.php  bench_direct.php  bench_ext.php  bench_fair.php  bench_io.php  bench_io_pipeline.php  bench_pipeline.php  bench_rust_pipeline.php  migrate.php  mysql_seed.sql
php/src/: lib.rs
py/: Cargo.toml  bench_sequential_fair.py  pyproject.toml
py/python/qail/: __init__.py  __init__.pyi  driver.py  (+2 more)
py/src/: cmd.rs  driver.rs  encoder.rs  row.rs  types.rs
qail-bench/: Cargo.toml  README.md
qail-bench/benches/: query_benchmark.rs
qail-bench/benchmarks/: fifty_million_libpq.c  fifty_million_pgx.go
qail-cli/: Cargo.toml
qail-cli/src/: backup.rs  introspection.rs  lib.rs  lint.rs  migrations.rs  repl.rs  schema.rs  shadow.rs  sql_gen.rs  util.rs
qail-core/: Cargo.toml
qail-core/examples/: audit_syntax.rs  debug_cte.rs  test_coalesce.rs  test_conversations.rs  test_cte_parse.rs  test_full_insights.rs  test_order_by.rs  test_param_repro.rs  test_schema_parse.rs  whatsapp_insights.rs
qail-core/src/: ast.rs  engine.rs  error.rs  lib.rs  parser.rs  schema.rs  transpiler.rs  validator.rs
qail-core/tests/: formatting_test.rs
qail-encoder/: Cargo.toml
qail-encoder/src/: lib.rs
qail-ffi/: Cargo.toml
qail-ffi/include/: qail.h
qail-ffi/src/: lib.rs
qail-lsp/: Cargo.toml
qail-lsp/src/: main.rs
qail-macro/: Cargo.toml
qail-macro/src/: lib.rs
qail-macros/: Cargo.toml
qail-macros/src/: lib.rs
qail-macros/tests/: integration.rs  schema_validation.rs
qail-pg/: Cargo.toml
qail-pg/examples/: benchmark.rs  million.rs  pipeline.rs  staging_test.rs  vs_orms.rs  vs_sqlx.rs
qail-pg/src/: lib.rs
qail-pg/tests/: integration.rs  tls_integration.rs
qail-php/: Cargo.toml
qail-php/src/: lib.rs
qail-py/: Cargo.toml  bench_ipc_sequential.py  profile_bottleneck.py  profile_deep.py
qail-py/src/: cmd.rs  driver.rs  encoder.rs  lib.rs  row.rs
qail-sqlx/: Cargo.toml
qail-sqlx/src/: executor.rs  lib.rs
qail-wasm/: Cargo.toml  LICENSE
qail-wasm/src/: lib.rs
qdrant/: Cargo.toml  README.md
qdrant/examples/: benchmark.rs  grpc_integration_test.rs  integration_test.rs  pool_benchmark.rs  qdrant_benchmark.rs
qdrant/src/: decoder.rs  driver.rs  encoder.rs  error.rs  grpc_transport.rs  lib.rs  point.rs  pool.rs  protocol.rs  transport.rs
redis/: Cargo.toml
redis/examples/: integration_test.rs  unified_demo.rs
redis/src/: cmd.rs  decoder.rs  driver.rs  encoder.rs  error.rs  lib.rs  pool.rs  transport.rs  value.rs
wasm/: Cargo.toml  README.md  bench.cjs  bench.mjs
wasm/src/: lib.rs
(+281 files in other folders)
