[workspace]
resolver = "2"
members = [
    "core",
    "cli",
    "lsp",
    "wasm",
    "ffi",
    "encoder",
    "pg",
    "py",
    "go",
    "php",
    "daemon",
    "mysql",
    "qdrant",
    "redis",
    "gateway",
]

[workspace.lints.rust]
warnings = "deny"
unused = "deny"
dead_code = "deny"
unused_imports = "deny"
unused_variables = "deny"

# Profiling: enable debug symbols in release builds
[profile.release]
debug = true
