[package]
name = "qail"
version = "0.14.4"
edition = "2024"
description = "Schema-first database toolkit - migrations, diff, lint, and query generation"
license = "MIT"
repository = "https://github.com/qail-io/qail"
readme = "README.md"
categories = ["database", "command-line-utilities", "parser-implementations"]
keywords = ["db", "sql", "cli", "query", "database"]

[dependencies]
qail-core = { path = "../core", version = "0.14.4" }
qail-pg = { path = "../pg", version = "0.14.4" }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
anyhow = "1.0"
chrono = "0.4"
rustyline = "14.0"
dirs = "5.0"
tokio = { version = "1", features = ["full"] }
url = "2.5"
notify-debouncer-full = "0.4"
md5 = "0.7"

[lints]
workspace = true
