[package]
name = "qail-core"
version = "0.14.18"
edition = "2024"
description = "AST-native query builder - type-safe expressions, zero SQL strings"
license = "MIT"
repository = "https://github.com/qail-io/qail"
readme = "README.md"
categories = ["database", "parser-implementations"]
keywords = ["qail", "sql", "parser"]

[dependencies]
nom = "8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4", "js"] }
rust_decimal = "1"
colored = "3"
strsim = "0.11"
regex = "1.10"
syn = { version = "2", features = ["full", "visit", "parsing"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
sqlparser = "0.60.0"
quote = "1.0.42"

[dev-dependencies]

[lints]
workspace = true
