[package]
name = "qail-daemon"
version = "0.1.0"
edition = "2024"
description = "QAIL Daemon - Unix socket IPC for zero-CGO database access"
license = "MIT"

[[bin]]
name = "qail-daemon"
path = "src/main.rs"

[dependencies]
qail-core = { path = "../core" }
qail-pg = { path = "../pg", default-features = false }
tokio = { version = "1", features = ["full", "net"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[lints]
workspace = true
