[package]
name = "qail-go"
version = "0.14.3"
edition = "2024"
description = "QAIL Go bindings - Rust FFI for CGO"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
qail-core = { path = "../core", version = "0.14.3" }
qail-pg = { path = "../pg", version = "0.14.3" }
libc = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
once_cell = "1.19"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
