[package]
name = "qail-lsp"
version = "0.14.4"
edition = "2024"
description = "Language Server Protocol implementation for QAIL"
license = "MIT"
repository = "https://github.com/qail-io/qail"
readme = "../README.md"
categories = ["development-tools", "text-editors"]
keywords = ["qail", "lsp", "language-server", "sql"]

[[bin]]
name = "qail-lsp"
path = "src/main.rs"

[dependencies]
qail-core = { path = "../core", version = "0.14.4" }
tower-lsp = { version = "0.20", features = ["proposed"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
