[package]
name = "qail-pg"
version = "0.14.18"
edition = "2024"
description = "Fastest async PostgreSQL driver - AST to wire protocol, optional io_uring on Linux"
license = "MIT"
repository = "https://github.com/qail-io/qail"
readme = "README.md"

[features]
default = []
# Enable io_uring for maximum performance (Linux native builds only, NOT cross-compilation)
io_uring = ["tokio-uring", "io-uring"]
# Enable chrono DateTime parsing in PgRow::datetime()
chrono = ["dep:chrono"]
# Enable uuid::Uuid parsing in PgRow::uuid_typed()
uuid = ["dep:uuid"]

[dependencies]
qail-core = { version = "0.14.18", path = "../core" }
postgres-protocol = "0.6"
bytes = "1.5"
async-trait = "0.1"
tokio = { version = "1.48.0", features = ["net", "io-util", "sync", "rt", "time"] }

# SCRAM-SHA-256 authentication
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }
base64 = "0.22"
rand = "0.9"

# Zero-allocation formatting for COPY encoder
itoa = "1"
ryu = "1"

# LRU cache for prepared statement management
lru = "0.16"

# TLS/SSL support
tokio-rustls = "0.26"
rustls-native-certs = "0.8"
rustls-pemfile = "2.2.0"

# Optional: Ergonomic row extraction
chrono = { version = "0.4", optional = true }
uuid = { version = "1.9", optional = true }

# io_uring support (Linux only, opt-in via feature flag)
# Use `--features io_uring` for native Linux builds
[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { version = "0.5", optional = true }
io-uring = { version = "0.7", optional = true }

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid"] }
uuid = { version = "1.9", features = ["v4"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
pq-sys = "0.6"
