[package]
name = "qail-py"
version = "0.14.18"
edition = "2021"
description = "Python bindings for QAIL - The fastest PostgreSQL driver"
license = "MIT"
repository = "https://github.com/qail-io/qail"
keywords = ["python", "postgres", "database", "async", "pyo3"]

[lib]
name = "qail"
crate-type = ["cdylib"]

[dependencies]
qail-core = { path = "../core", version = "0.14.18" }
qail-pg = { path = "../pg", version = "0.14.18" }

pyo3 = { version = "0.27", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.18"

[build-dependencies]
pyo3-build-config = "0.27"

[lints.rust]
warnings = "deny"
unused = "deny"
dead_code = "deny"
unused_imports = "deny"
unused_variables = "deny"
