[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "qail"
version = "0.9.6"
description = "AST-native PostgreSQL driver for Python - No SQL strings, direct wire protocol"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["postgres", "database", "async", "ast"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "qail.qail"
