[package]
name = "qail-bench"
version = "0.9.0"
edition = "2024"

[[bench]]
name = "query_benchmark"
harness = false

[dependencies]
qail-core = { path = "../qail-core" }
criterion = { version = "0.5", features = ["html_reports"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[lints]
workspace = true
