[package]
name = "qail"
version = "0.5.1-alpha"
edition = "2024"
description = "The Horizontal Query Language — Stop writing strings. Hook your data."
license = "MIT"
repository = "https://github.com/qail-rs/qail"
readme = "../README.md"
categories = ["database", "command-line-utilities", "parser-implementations"]
keywords = ["db", "sql", "cli", "query", "database"]

[dependencies]
qail-core = { path = "../qail-core", version = "0.5.1-alpha" }
qail-macro = { path = "../qail-macro", version = "0.5.1-alpha" }
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
comfy-table = "7.1"
anyhow = "1.0"
chrono = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "mysql", "sqlite", "chrono", "uuid", "json"] }
