[package]
name = "qail"
version = "0.6.0"
edition = "2024"
description = "The Universal Query Transpiler - SQL is Assembly, Compile to Safety"
license = "MIT"
repository = "https://github.com/qail-rs/qail"
readme = "../README.md"
categories = ["database", "command-line-utilities", "parser-implementations"]
keywords = ["db", "sql", "cli", "query", "database"]

[dependencies]
qail-core = { path = "../qail-core", version = "0.6.0" }
qail-macro = { path = "../qail-macro", version = "0.6.0" }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
anyhow = "1.0"
chrono = "0.4"
rustyline = "14.0"
dirs = "5.0"

[lints]
workspace = true
