[package]
name = "qail"
version = "0.9.6"
edition = "2024"
description = "The Universal Query Transpiler - SQL is Assembly, Compile to Safety"
license = "MIT"
repository = "https://github.com/qail-rs/qail"
readme = "../README.md"
categories = ["database", "command-line-utilities", "parser-implementations"]
keywords = ["db", "sql", "cli", "query", "database"]

[dependencies]
qail-core = { path = "../qail-core", version = "0.9.6" }
qail-pg = { path = "../qail-pg", version = "0.9.6" }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
anyhow = "1.0"
chrono = "0.4"
rustyline = "14.0"
dirs = "5.0"
tokio = { version = "1", features = ["full"] }
url = "2.5"
notify-debouncer-full = "0.4"
md5 = "0.7"

[lints]
workspace = true
