[package]
name = "qail-core"
version = "0.5.1-alpha"
edition = "2024"
description = "Core parser and transpiler for QAIL"
license = "MIT"
repository = "https://github.com/qail-rs/qail"
readme = "../README.md"
categories = ["database", "parser-implementations"]
keywords = ["qail", "sql", "parser"]

[dependencies]
nom = "7.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
rust_decimal = "1.33"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "mysql", "sqlite", "chrono", "uuid", "json"] }
colored = "2.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

