[package]
name = "qail-core"
version = "0.6.0"
edition = "2024"
description = "The Universal Query Transpiler - Core parser and transpiler"
license = "MIT"
repository = "https://github.com/qail-rs/qail"
readme = "../README.md"
categories = ["database", "parser-implementations"]
keywords = ["qail", "sql", "parser"]

[dependencies]
nom = "7.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
rust_decimal = "1.33"
colored = "2.0"
strsim = "0.11.1"

[dev-dependencies]

[lints]
workspace = true
