[package]
name = "qail-core"
version = "0.9.4"
edition = "2024"
description = "The Universal Query Transpiler - Core parser and transpiler"
license = "MIT"
repository = "https://github.com/qail-rs/qail"
readme = "../README.md"
categories = ["database", "parser-implementations"]
keywords = ["qail", "sql", "parser"]

[dependencies]
nom = "8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4", "js"] }
rust_decimal = "1"
colored = "3"
strsim = "0.11"
regex = "1.10"

[dev-dependencies]

[lints]
workspace = true
