[package]
name = "qail-encoder"
version = "0.10.1"
edition = "2024"
description = "QAIL Encoder - Lightweight wire protocol encoding (no I/O, no TLS)"
license = "MIT"
repository = "https://github.com/qail-rs/qail"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
qail-core = { path = "../qail-core" }
qail-pg = { path = "../qail-pg", default-features = false, optional = true }

[features]
default = []
response = ["qail-pg"]

# Minimal dependencies - just encoding by default!
# Enable "response" feature for response parsing

[lints]
workspace = true
