[package]
name = "qail-ffi"
version = "0.7.0"
edition = "2021"
description = "QAIL C-API for FFI bindings (Go, PHP, Python, Java)"
license = "MIT"
repository = "https://github.com/qail-rs/qail"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
qail-core = { path = "../qail-core" }
serde_json = "1.0"

[build-dependencies]

[lints]
workspace = true
