[package]
name = "qail-ffi"
version = "0.10.2"
edition = "2024"
description = "QAIL C-API for FFI bindings (Go, PHP, Python, Java)"
license = "MIT"
repository = "https://github.com/qail-io/qail"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
qail-core = { path = "../qail-core" }
qail-pg = { path = "../qail-pg" }
serde_json = "1.0"

[build-dependencies]

[lints]
workspace = true
