[package]
name = "qail-macros"
version = "0.8.11"
edition = "2021"
license = "MIT"
description = "Compile-time validated QAIL query macros"
repository = "https://github.com/nicosql/qail"
keywords = ["sql", "query", "macro", "compile-time", "database"]
categories = ["database", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Use qail-core for compile-time parse and transpile validation
qail-core = { path = "../qail-core", version = "0.8.12" }

[dev-dependencies]
trybuild = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
qail-sqlx = { path = "../qail-sqlx" }
anyhow = "1.0"
