[package]
name = "qail-pg"
version = "0.9.0"
edition = "2024"
description = "PostgreSQL driver for QAIL - native wire protocol"
license = "MIT"

[dependencies]
qail-core = { path = "../qail-core" }
postgres-protocol = "0.6"
bytes = "1.5"
async-trait = "0.1"
tokio = { version = "1", features = ["net", "io-util", "sync", "rt"] }

# SCRAM-SHA-256 authentication
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }
base64 = "0.22"
rand = "0.9"

# TLS/SSL support
tokio-rustls = "0.26"
rustls-native-certs = "0.8"

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid"] }
uuid = { version = "1.9", features = ["v4"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
