[package]
name = "qail-pg"
version = "0.11.2"
edition = "2024"
description = "Fastest async PostgreSQL driver - AST to wire protocol, auto-detects io_uring on Linux"
license = "MIT"
repository = "https://github.com/qail-io/qail"
readme = "README.md"

[dependencies]
qail-core = { version = "0.11.2", path = "../qail-core" }
postgres-protocol = "0.6"
bytes = "1.5"
async-trait = "0.1"
tokio = { version = "1.48.0", features = ["net", "io-util", "sync", "rt", "time"] }

# SCRAM-SHA-256 authentication
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }
base64 = "0.22"
rand = "0.9"

# Zero-allocation formatting for COPY encoder
itoa = "1"
ryu = "1"

# TLS/SSL support
tokio-rustls = "0.26"
rustls-native-certs = "0.8"
rustls-pemfile = "2.2.0"

# io_uring support (Linux only, runtime fallback to tokio if not available)
[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = "0.5"
io-uring = "0.7"

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid"] }
uuid = { version = "1.9", features = ["v4"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }

