[package]
name = "qail-php"
version = "0.11.8"
edition = "2024"
description = "QAIL PHP bindings - Rust FFI for PHP FFI"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib"]  # cdylib for FFI, staticlib for extension

[dependencies]
qail-core = { path = "../qail-core", version = "0.11.8" }
qail-pg = { path = "../qail-pg", version = "0.11.8" }
qail-mysql = { path = "../qail-mysql", version = "0.11.8" }
libc = "0.2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "io-util", "sync"] }
once_cell = "1.19"
