[package]
name = "qail-py"
version = "0.9.11"
edition = "2021"
description = "Python bindings for QAIL - The fastest PostgreSQL driver"
license = "MIT"
repository = "https://github.com/qail-rs/qail"
keywords = ["python", "postgres", "database", "async", "pyo3"]

[lib]
name = "qail"
crate-type = ["cdylib"]

[dependencies]
qail-core = { path = "../qail-core", version = "0.9.11" }
qail-pg = { path = "../qail-pg", version = "0.9.11" }

pyo3 = { version = "0.27", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.18"

[build-dependencies]
pyo3-build-config = "0.27"

[lints.rust]
warnings = "deny"
unused = "deny"
dead_code = "deny"
unused_imports = "deny"
unused_variables = "deny"
