[package]
name = "qail-sqlx"
version = "0.8.3"
edition = "2021"
description = "SQLx integration for QAIL - execute QAIL queries with typed results"
license = "MIT"
repository = "https://github.com/qail-rs/qail"
homepage = "https://qail.rs"

[dependencies]
qail-core = { path = "../qail-core" }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "mysql", "sqlite"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tokio-test = "0.4"

[lints]
workspace = true
