[package]
name = "qail-wasm"
version = "0.6.0"
edition = "2021"
description = "QAIL parser and transpiler for JavaScript/TypeScript via WebAssembly"
license = "MIT"
repository = "https://github.com/qail-rs/qail"
homepage = "https://qail.rs"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
nom = "7.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true

[lints]
workspace = true
