[package]
name = "qail-qdrant"
version = "0.14.18"
edition = "2024"
description = "QAIL driver for Qdrant vector database"
license = "MIT"
repository = "https://github.com/qail-io/qail"
keywords = ["qail", "qdrant", "vector", "database", "ai"]
categories = ["database"]

[dependencies]
qail-core = { path = "../core", version = "0.14.18" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
bytes = "1"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# gRPC transport
h2 = "0.4"
http = "1"
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"
qdrant-client = "1"
anyhow = "1"

[build-dependencies]
tonic-build = "0.13"

[lints.rust]
warnings = "deny"
unused = "deny"
dead_code = "deny"
unused_imports = "deny"
unused_variables = "deny"
