[package]
name = "qail-redis"
version = "0.14.18"
edition = "2024"
description = "QAIL driver for Redis - ephemeral state and caching. Part of the QAIL decision layer."
license = "MIT OR Apache-2.0"
repository = "https://github.com/qail-io/qail"
homepage = "https://qail.io"
readme = "README.md"
keywords = ["qail", "redis", "cache", "database", "async"]
categories = ["database", "caching"]

[dependencies]
qail-core = { path = "../core", version = "0.14.18" }
tokio = { version = "1", features = ["net", "io-util", "sync", "time", "rt", "rt-multi-thread", "macros"] }
bytes = "1"
thiserror = "2"

[dev-dependencies]
tokio-test = "0.4"

[lints.rust]
warnings = "deny"
unused = "deny"
dead_code = "deny"
unused_imports = "deny"
unused_variables = "deny"
